--- a/MessengerLibrary/MessengerLibrary.csproj
+++ b/MessengerLibrary/MessengerLibrary.csproj
@@ -49,20 +49,23 @@
     <Compile Include="ConnectionDirector\EventType.cs" />
     <Compile Include="ConnectionDirector\IConnectionDirector.cs" />
     <Compile Include="ConnectionDirector\Parsers\IXMLParser.cs" />
-    <Compile Include="DataEncoder\DataEncoderProviders\ChatRoomEncoderProvider.cs" />
-    <Compile Include="DataEncoder\DataEncoder.cs" />
-    <Compile Include="DataEncoder\DataEncoderProviders\ShortUserDataEncoder.cs" />
-    <Compile Include="DataEncoder\DataEncoderProviders\UserDataEncoder.cs" />
-    <Compile Include="DataEncoder\IEncoderProvider.cs" />
+    <Compile Include="DataReceivers\DataDecoder\ChatRoomDecoderProvider.cs" />
+    <Compile Include="DataReceivers\DataDecoder\DataDecoder.cs" />
+    <Compile Include="DataReceivers\DataDecoder\IDecoderProvider.cs" />
+    <Compile Include="DataReceivers\DataDecoder\ShortUserDataDecoder.cs" />
+    <Compile Include="DataReceivers\DataDecoder\UserDataDecoder.cs" />
+    <Compile Include="DataSenders\DataEncoder\DataEncoder.cs" />
+    <Compile Include="DataSenders\DataEncoder\Encryption\IEncryptable.cs" />
+    <Compile Include="DataSenders\DataEncoder\XMLDataCreators\IXMLDataProvider.cs" />
+    <Compile Include="DataSenders\Data\RequestType.cs" />
+    <Compile Include="DataSenders\IRequestDispatcher.cs" />
+    <Compile Include="DataSenders\ISenderable.cs" />
+    <Compile Include="DataSenders\RequestDispatcher.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShortUserData.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DataDecoder\" />
-    <Folder Include="DataReceivers\" />
-    <Folder Include="DataSenders\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
