Added implementation for events in server

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataStorage\DataStorage.cs" />
+    <Compile Include="DataStorage\ServerEventHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
@@ -55,6 +57,9 @@
       <Project>{3a16d8f7-fd67-45ce-bb8a-3d1be8736f33}</Project>
       <Name>MessengerLibrary</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataStorage\Notifications\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
