Added some implementtaion on server, removed unnecessary files

--- a/Server/Messenger.Server.csproj
+++ b/Server/Messenger.Server.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataStorage\DataStorage.cs" />
+    <Compile Include="DataStorage\Notifications\ExtendedMessageEventArgs.cs" />
     <Compile Include="DataStorage\ServerEventHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -58,9 +59,7 @@
       <Name>MessengerLibrary</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DataStorage\Notifications\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
